@@ -107,7 +107,8 @@
 
   :min-lein-version "2.5.0"
 
-  :jvm-opts ["-Duser.timezone=UTC" "-XX:MaxPermSize=128m" "-Xmx2G" "-XX:+UseCompressedOops" "-XX:+HeapDumpOnOutOfMemoryError"]
+  :jvm-opts ["-Duser.timezone=UTC" "-XX:MaxPermSize=128m" "-Xmx4G" "-XX:+UseCompressedOops" "-XX:+HeapDumpOnOutOfMemoryError"]
+  ;; "-XX:-UseConcMarkSweepGC" ;; if -Xmx4g isn't enough
   ;; "-XX:+PrintGC"  "-XX:+PrintGCDetails" "-XX:+PrintGCTimeStamps"
 
   :uberimage {:base-image "mastodonc/basejava"
